-- Fix audio not playing on iOS

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -531,7 +531,7 @@ body {
             border-radius: 0 0 10px 10px;
             border-top: 0;
             transition: height 0.2s ease;
-            font-size: 0.9rem;
+            font-size: 1rem;
 
             &.link {
               height: 65px;
